--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: whyly
 description: whying
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/26275878?v=3&u=55a285c7c9654898da283327a433eef2dbf7c4f4&s=400
 
 #
 # Flags below are optional
